--- a/client/index.html
+++ b/client/index.html
@@ -42,9 +42,10 @@
                 </div>
             </a>
         </div>
+
     </div>
 </section>
-
+<img src="img/Intersect.png" alt="" style="position: absolute; top: 0; right: 0; z-index: -1;">
 <section class="section prod-ready pb-100 pt-0">
     <div class="container">
         <div class="section-header">
