--- a/client/index.html
+++ b/client/index.html
@@ -245,11 +245,11 @@
         <div class="section-body" style="padding-top: 63px;">
             <div class="columns">
                 <div class="column">
-                   <div class="columns is-mobile">
-                       <div class="column is-2"></div>
-                       <div class="column name is-7">Коронка стальная</div>
-                       <div class="column price is-3">200Р</div>
-                   </div>
+                    <div class="columns is-mobile">
+                        <div class="column is-2"></div>
+                        <div class="column name is-7">Коронка стальная</div>
+                        <div class="column price is-3">200Р</div>
+                    </div>
                     <div class="columns is-mobile">
                         <div class="column is-2"></div>
                         <div class="column name is-7">Коронка восстановительная</div>
@@ -334,5 +334,110 @@
         </div>
     </div>
 </section>
+<section class="section pb-100 pt-0 full-spectre">
+    <div class="container">
+        <div class="columns">
+            <div class="column is-flex" style="flex-direction: column">
+                <div class="section-header">
+                    <div class="section-header-text">
+                        Наши контакты
+                    </div>
+                    <div class="section-header-subtext">
+                        Получить консультацию, записаться на прием можно
+                        по нашему номеру телефона, или Вы можете заглянуть
+                        к нам в клинику.
+                    </div>
+                </div>
+                <div style="margin: auto 0;" class="contacts-side-text-small">
+                    <div class="dot"></div>
+                    Пенсионерам предоставляются скидки!
+                </div>
+                <div class="contacts-side-text-big">
+                    Будем рады видеть Вас в стенах нашей клиники!
+                </div>
+            </div>
+            <div class="column">
+                <div class="contacts">
+                    <div class="contacts-item">
+                        <div class="contacts-item-name">
+                            Телефон
+                        </div>
+                        <div class="contacts-item-value">
+                            +7 4228 355 55 84
+                        </div>
+                    </div>
+                    <div class="contacts-item">
+                        <div class="contacts-item-name">
+                            Адрес
+                        </div>
+                        <div class="contacts-item-value">
+                            г. Ульяновск, Октябрьская ул.,
+                            дом 15
+                            <div class="contacts-subtext">посмотреть на карте</div>
+                        </div>
+                    </div>
+
+                    <div class="contacts-item">
+                        <div class="contacts-item-name">
+                            Часы работы
+                        </div>
+                        <div class="contacts-item-value">
+                            Пн - Пт с 9:00 - 18:00
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<footer class="footer">
+    <div class="container">
+        <div class="columns">
+            <div class="column">
+                <div class="d-flex" style="flex-direction: column">
+                    <div style="padding-bottom: 32px">
+                        <img src="img/logo.png" alt="" class="logo">
+                        <span>ДЕНТА</span>
+                    </div>
+                    <div class="footer-info">
+                        <div class="footer-company-name">ООО Медицинский Цетр “Дента”</div>
+                        <div class="credits d-flex" style="flex-direction: column">
+                            <div>ИНН 7334535353</div>
+                            <div>КПП 284724368</div>
+                            <div>ОГРН 374343434</div>
+                            <div>ОКПО 278277</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="column"></div>
+            <div class="column">
+                <div class="is-flex" style="flex-direction: column">
+                    <div class="footer-link">Главная</div>
+                    <div class="footer-link">Готовые решения</div>
+                    <div class="footer-link">Услуги</div>
+                    <div class="footer-link">Контакты</div>
+                </div>
+            </div>
+            <div class="column"></div>
+            <div class="column">
+                <div class="is-flex" style="flex-direction: column;">
+                    <div class="footer-contact">
+                        <div class="footer-contact-name">Телефон</div>
+                        <div class="footer-contact-value">+7 4228 355 55 84</div>
+                    </div>
+                    <div class="footer-contact">
+                        <div class="footer-contact-name">Адрес</div>
+                        <div class="footer-contact-value">г. Ульяновск, Октябрьская ул.,
+                            дом 15
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
 </body>
 </html>
