--- a/client/index.html
+++ b/client/index.html
@@ -1,32 +1,39 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Hello Bulma!</title>
     <link rel="stylesheet" href="css/bulma.css">
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-<nav class="section">
+<nav class="navbar">
     <div class="container">
-        <div class="nav-bar">
-            <div class="">
+        <div class="navbar-brand">
+            <a href="" class="navbar-item">
                 <img src="img/logo.png" alt="" class="logo">
                 <span>ДЕНТА</span>
+            </a>
+            <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+                <span aria-hidden="true"></span>
+                <span aria-hidden="true"></span>
+                <span aria-hidden="true"></span>
+            </a>
+        </div>
+        <div class="navbar-menu">
+            <div class="navbar-start">
+                <a href="" class="navbar-item">Главная</a>
+                <a href="" class="navbar-item">Готовые решения</a>
+                <a href="" class="navbar-item">Услуги</a>
+                <a href="" class="navbar-item">Контакты</a>
             </div>
-            <div class="menu">
-                <span class="menu-item">Главная</span>
-                <span class="menu-item">Готовые решения</span>
-                <span class="menu-item">Услуги</span>
-                <span class="menu-item">Контакты</span>
-            </div>
-
         </div>
     </div>
 </nav>
-<section class="section pb-100" style="padding-bottom: 226px;">
+<section class="section pb-100">
     <div class="container">
         <div class="hero">
             <h1 class="hero-text">Протезирование зубов.
@@ -45,7 +52,7 @@
 
     </div>
 </section>
-<img src="img/Intersect.png" alt="" style="position: absolute; top: 0; right: 0; z-index: -1;">
+<img class="hero-image" src="img/Intersect.png" alt="" class="is-hidden-touch">
 <section class="section prod-ready pb-100 pt-0">
     <div class="container">
         <div class="section-header">
@@ -246,86 +253,70 @@
             <div class="columns">
                 <div class="column">
                     <div class="columns is-mobile">
-                        <div class="column is-2"></div>
-                        <div class="column name is-7">Коронка стальная</div>
+                        <div class="column name is-7-tablet is-offset-2-tablet is-9-mobile">Коронка стальная</div>
                         <div class="column price is-3">200Р</div>
                     </div>
                     <div class="columns is-mobile">
-                        <div class="column is-2"></div>
-                        <div class="column name is-7">Коронка восстановительная</div>
+                        <div class="column name is-7-tablet is-offset-2-tablet is-9-mobile">Коронка восстановительная</div>
                         <div class="column price is-3">200Р</div>
                     </div>
                     <div class="columns is-mobile">
-                        <div class="column is-2"></div>
-                        <div class="column name is-7">Литой зуб</div>
+                        <div class="column name is-7-tablet is-offset-2-tablet is-9-mobile">Литой зуб</div>
                         <div class="column price is-3">200Р</div>
                     </div>
                     <div class="columns is-mobile">
-                        <div class="column is-2"></div>
-                        <div class="column name is-7">Фасетка</div>
+                        <div class="column name is-7-tablet is-offset-2-tablet is-9-mobile">Фасетка</div>
                         <div class="column price is-3">200Р</div>
                     </div>
                     <div class="columns is-mobile">
-                        <div class="column is-2"></div>
-                        <div class="column name is-7">Коронка с облицовкой</div>
+                        <div class="column name is-7-tablet is-offset-2-tablet is-9-mobile">Коронка с облицовкой</div>
                         <div class="column price is-3">200Р</div>
                     </div>
                     <div class="columns is-mobile">
-                        <div class="column is-2"></div>
-                        <div class="column name is-7">Коронка пластмассовая</div>
+                        <div class="column name is-7-tablet is-offset-2-tablet is-9-mobile">Коронка пластмассовая</div>
                         <div class="column price is-3">200Р</div>
                     </div>
                     <div class="columns is-mobile">
-                        <div class="column is-2"></div>
-                        <div class="column name is-7">Бюгельная коронка</div>
+                        <div class="column name is-7-tablet is-offset-2-tablet is-9-mobile">Бюгельная коронка</div>
                         <div class="column price is-3">200Р</div>
                     </div>
                     <div class="columns is-mobile">
-                        <div class="column is-2"></div>
-                        <div class="column name is-7">Литой штифт</div>
+                        <div class="column name is-7-tablet is-offset-2-tablet is-9-mobile">Литой штифт</div>
                         <div class="column price is-3">200Р</div>
                     </div>
 
                 </div>
                 <div class="column">
                     <div class="columns is-mobile">
-                        <div class="column is-2"></div>
-                        <div class="column name is-7">Коронка стальная</div>
+                        <div class="column name is-7-tablet is-offset-2-tablet is-9-mobile">Коронка стальная</div>
                         <div class="column price is-3">200Р</div>
                     </div>
                     <div class="columns is-mobile">
-                        <div class="column is-2"></div>
-                        <div class="column name is-7">Коронка восстановительная</div>
+                        <div class="column name is-7-tablet is-offset-2-tablet is-9-mobile">Коронка восстановительная</div>
                         <div class="column price is-3">200Р</div>
                     </div>
                     <div class="columns is-mobile">
-                        <div class="column is-2"></div>
-                        <div class="column name is-7">Литой зуб</div>
+                        <div class="column name is-7-tablet is-offset-2-tablet is-9-mobile">Литой зуб</div>
                         <div class="column price is-3">200Р</div>
                     </div>
                     <div class="columns is-mobile">
-                        <div class="column is-2"></div>
-                        <div class="column name is-7">Фасетка</div>
+                        <div class="column name is-7-tablet is-offset-2-tablet is-9-mobile">Фасетка</div>
                         <div class="column price is-3">200Р</div>
                     </div>
                     <div class="columns is-mobile">
-                        <div class="column is-2"></div>
-                        <div class="column name is-7">Коронка с облицовкой</div>
+                        <div class="column name is-7-tablet is-offset-2-tablet is-9-mobile is-offset-2-tablet">Коронка с облицовкой</div>
                         <div class="column price is-3">200Р</div>
                     </div>
                     <div class="columns is-mobile">
-                        <div class="column is-2"></div>
-                        <div class="column name is-7">Коронка пластмассовая</div>
+                        <div class="column name is-7-tablet is-offset-2-tablet is-9-mobile">Коронка пластмассовая</div>
                         <div class="column price is-3">200Р</div>
                     </div>
                     <div class="columns is-mobile">
-                        <div class="column is-2"></div>
-                        <div class="column name is-7">Бюгельная коронка</div>
+                        <div class="column name is-7-tablet is-offset-2-tablet is-9-mobile">Бюгельная коронка</div>
                         <div class="column price is-3">200Р</div>
                     </div>
                     <div class="columns is-mobile">
-                        <div class="column is-2"></div>
-                        <div class="column name is-7">Литой штифт</div>
+                        <div class="column name is-7-tablet is-offset-2-tablet is-9-mobile">Литой штифт</div>
                         <div class="column price is-3">200Р</div>
                     </div>
 
@@ -395,7 +386,7 @@
 <footer class="footer">
     <div class="container">
         <div class="columns">
-            <div class="column">
+            <div class="column is-one-third">
                 <div class="d-flex" style="flex-direction: column">
                     <div style="padding-bottom: 32px">
                         <img src="img/logo.png" alt="" class="logo">
@@ -412,8 +403,7 @@
                     </div>
                 </div>
             </div>
-            <div class="column"></div>
-            <div class="column">
+            <div class="column is-one-third">
                 <div class="is-flex" style="flex-direction: column">
                     <div class="footer-link">Главная</div>
                     <div class="footer-link">Готовые решения</div>
@@ -421,8 +411,7 @@
                     <div class="footer-link">Контакты</div>
                 </div>
             </div>
-            <div class="column"></div>
-            <div class="column">
+            <div class="column is-one-third">
                 <div class="is-flex" style="flex-direction: column;">
                     <div class="footer-contact">
                         <div class="footer-contact-name">Телефон</div>
